添加Footer局部视图，修复Bug

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -124,7 +124,7 @@
     }
     <div class="Plan_content top50">
         <div class="Plan_CInfo">
-            <div class="CZ_hdtit" onclick="location.href='/Record/OpenRecord/?lType=@currentLotteryTypeId'">
+            <div class="CZ_hdtit" onclick="location.href='/Record/OpenRecord/?lType=@lType'">
                 <dl class="CZ_hdMain">
                     <dt><a href="javascript:;"><img src="~/images/@ViewBag.Icon"></a></dt>
                     <dd>
