--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Follow.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Follow.cshtml
@@ -80,7 +80,7 @@
                          + "<dd>"
                          + "<div class='fans_ddRight f-r'  onclick='unorfollow(this," + value.Followed_UserId + ")'> <p class='fans_Qxgz'>取消关注</p></div>"
                          + "<div class='details_ddLeft'>"
-                         + "<h3><a href='/Personal/UserCenter/" + value.UserId + "'>" + value.Nickname + "</a></h3>"
+                         + "<h3><a href='/Personal/UserCenter/" + value.Followed_UserId + "'>" + value.Nickname + "</a></h3>"
                          + "<p>" + value.Autograph + "</p>"
                          + "</div> </dd> </dl>";
 
