--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -60,7 +60,7 @@
                     <li><a href="javascript:;">@lotteryType.Name</a></li>
                 }
 
-                <div style="clear:bothl;"></div>
+                <div style="clear:both;"></div>
             </ul>
         </div>
     </div>
@@ -202,13 +202,8 @@
         
     </div>
 
-    <footer class="hjc_footer">
-        <div class="hjc_ftNav">
-            <span>触屏版</span>|<a href="javascript:;">电脑版</a>
-        </div>
-        <div class="hjc_ftphone">永久域名：m.1369p.com</div>
-        <p class="hjc_ftcopy">© 2016 皇家直播1369p.me 版权所有</p>
-    </footer>
+
+    @Html.Partial("Footer")
 
 </body>
 
