--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
@@ -66,7 +66,7 @@
         <div style="clear:both;"></div>
     </div>
 
-    <div class="details_box">
+    <div class="details_box" style="height: 100%; overflow: auto;">
         <div class="details_info1 mescroll" id="mescroll0">
             <div id="datalist0" class="data-list">
 
