bug+cookie 一个月过期

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
@@ -35,7 +35,7 @@
         <div class="sion_hdInfo1">
             <div class="HdIf1_l f-l">
                 <h3>@MyYj</h3>
-                <p>我的佣金</p>
+                <a href="/Personal/CommissionRules"><p>我的佣金</p></a> 
             </div>
             <a href="javascript:;" class="HdIf1_R f-r">提现</a>
             <div style="clear:both;"></div>
