--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TransactionRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TransactionRecord.cshtml
@@ -131,7 +131,7 @@
                         noMoreSize: 1,
                         empty: {
                             icon: "/images/null.png",
-                            tip: "暂无计划~",
+                            tip: "暂无交易记录~",
                             //btntext: "去逛逛 >", //按钮,默认""
                             //btnClick: function() {
                             //    alertmsg("去逛逛");
