--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -298,7 +298,7 @@
             string enable = item.Id == currentNewsTypeId ? "block" : "none";
             if (item.ShowType == 2)
             {
-                <div class="hjc_news_lhs padding0" id="gallery"  style="display: @enable;">
+                <div class="hjc_news_lhs padding0" id="gallery"  style="overflow-x: hidden;display: @enable;">
                     @Html.Action("NewsGalleryCategoryList", new {ltype = currentLotteryTypeId, newsTypeId= currentNewsTypeId})
                 </div>
             }
