增加邀请成功注册任务记录

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -21,7 +21,7 @@
     <div class="Personal_header">
         <div class="Personal_hdInfo1">
             <div class="Per_hdIf1Logo f-l">
-                <a href="/Personal/Set">
+                <a href="/Personal/UserCenter/@Model.Id">
                     @if (string.IsNullOrEmpty(Model.Headpath))
                     {
                         <img src="~/images/default_avater.png">
