--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
@@ -47,6 +47,9 @@
 
                     } else {
                         alertmsg("重置成功");
+
+                        setTimeout("location.href='/Home/Login';", 1500);
+
                     }
 
                 });
