--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -2412,7 +2412,7 @@ a {
         width: 60px;
         height: 60px;
         border-radius: 50%;
-        /*overflow:hidden;*/
+        overflow:hidden;
     }
 
         .details_DL dt a {
